deploy: db1798cd816ffb51e10f3b475acc519734d02374

--- a/genindex.html
+++ b/genindex.html
@@ -828,6 +828,8 @@ title="Fullscreen mode"
       <li><a href="wfl.calculators.html#wfl.calculators.espresso.Espresso.calculate">calculate() (wfl.calculators.espresso.Espresso method)</a>
 
       <ul>
+        <li><a href="wfl.calculators.html#wfl.calculators.mopac.MOPAC.calculate">(wfl.calculators.mopac.MOPAC method)</a>
+</li>
         <li><a href="wfl.calculators.orca.html#wfl.calculators.orca.basinhopping.BasinHoppingORCA.calculate">(wfl.calculators.orca.basinhopping.BasinHoppingORCA method)</a>
 </li>
         <li><a href="wfl.calculators.orca.html#wfl.calculators.orca.ORCA.calculate">(wfl.calculators.orca.ORCA method)</a>
@@ -851,14 +853,14 @@ title="Fullscreen mode"
         <li><a href="wfl.calculators.html#wfl.calculators.wfl_fileio_calculator.WFLFileIOCalculator.clean_rundir">(wfl.calculators.wfl_fileio_calculator.WFLFileIOCalculator method)</a>
 </li>
       </ul></li>
-      <li><a href="wfl.calculators.html#wfl.calculators.espresso.Espresso.cleanup">cleanup() (wfl.calculators.espresso.Espresso method)</a>
-
-      <ul>
-        <li><a href="wfl.calculators.orca.html#wfl.calculators.orca.ORCA.cleanup">(wfl.calculators.orca.ORCA method)</a>
-</li>
-      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="wfl.calculators.orca.html#wfl.calculators.orca.ORCA.cleanup">cleanup() (wfl.calculators.orca.ORCA method)</a>
+
+      <ul>
+        <li><a href="wfl.calculators.html#wfl.calculators.wfl_fileio_calculator.WFLFileIOCalculator.cleanup">(wfl.calculators.wfl_fileio_calculator.WFLFileIOCalculator method)</a>
+</li>
+      </ul></li>
       <li><a href="wfl.html#wfl.configset.OutputSpec.close">close() (wfl.configset.OutputSpec method)</a>
 </li>
       <li><a href="wfl.select.html#wfl.select.selection_space.compare_manual_minima">compare_manual_minima() (in module wfl.select.selection_space)</a>
@@ -1151,6 +1153,8 @@ title="Fullscreen mode"
 </li>
         <li><a href="wfl.calculators.html#module-wfl.calculators.generic">wfl.calculators.generic</a>
 </li>
+        <li><a href="wfl.calculators.html#module-wfl.calculators.mopac">wfl.calculators.mopac</a>
+</li>
         <li><a href="wfl.calculators.orca.html#module-wfl.calculators.orca">wfl.calculators.orca</a>
 </li>
         <li><a href="wfl.calculators.orca.html#module-wfl.calculators.orca.basinhopping">wfl.calculators.orca.basinhopping</a>
@@ -1296,6 +1300,10 @@ title="Fullscreen mode"
         <li><a href="wfl.utils.html#module-wfl.utils.vol_composition_space">wfl.utils.vol_composition_space</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="wfl.calculators.html#wfl.calculators.mopac.MOPAC">MOPAC (class in wfl.calculators.mopac)</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -1795,6 +1803,13 @@ title="Fullscreen mode"
 
       <ul>
         <li><a href="wfl.calculators.html#module-wfl.calculators.generic">module</a>
+</li>
+      </ul></li>
+      <li>
+    wfl.calculators.mopac
+
+      <ul>
+        <li><a href="wfl.calculators.html#module-wfl.calculators.mopac">module</a>
 </li>
       </ul></li>
       <li>
@@ -2306,6 +2321,8 @@ title="Fullscreen mode"
       <li><a href="wfl.calculators.html#wfl.calculators.espresso.Espresso.wfl_generic_def_autopara_info">wfl_generic_def_autopara_info (wfl.calculators.espresso.Espresso attribute)</a>
 
       <ul>
+        <li><a href="wfl.calculators.html#wfl.calculators.mopac.MOPAC.wfl_generic_def_autopara_info">(wfl.calculators.mopac.MOPAC attribute)</a>
+</li>
         <li><a href="wfl.calculators.orca.html#wfl.calculators.orca.ORCA.wfl_generic_def_autopara_info">(wfl.calculators.orca.ORCA attribute)</a>
 </li>
       </ul></li>
