deploy: c2ca3d6f681ec3570d17dd95e686eee9227afcd3

--- a/genindex.html
+++ b/genindex.html
@@ -1250,6 +1250,8 @@ title="Fullscreen mode"
 </li>
         <li><a href="wfl.generate.html#module-wfl.generate.utils">wfl.generate.utils</a>
 </li>
+        <li><a href="wfl.html#module-wfl.map">wfl.map</a>
+</li>
         <li><a href="wfl.scripts.html#module-wfl.scripts">wfl.scripts</a>
 </li>
         <li><a href="wfl.select.html#module-wfl.select">wfl.select</a>
@@ -1413,10 +1415,10 @@ title="Fullscreen mode"
 </li>
       <li><a href="wfl.utils.html#wfl.utils.replace_eval_in_strs.replace_eval_in_strs">replace_eval_in_strs() (in module wfl.utils.replace_eval_in_strs)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="wfl.utils.html#wfl.utils.round_sig_figs.round_sig_figs">round_sig_figs() (in module wfl.utils.round_sig_figs)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="wfl.cli.html#wfl.cli.gap_rss_iter_fit.RSS_minima_diverse">RSS_minima_diverse() (in module wfl.cli.gap_rss_iter_fit)</a>
 </li>
       <li><a href="wfl.calculators.html#wfl.calculators.generic.run">run() (in module wfl.calculators.generic)</a>
@@ -1429,6 +1431,8 @@ title="Fullscreen mode"
         <li><a href="wfl.generate.html#wfl.generate.optimize.run">(in module wfl.generate.optimize)</a>
 </li>
         <li><a href="wfl.generate.html#wfl.generate.smiles.run">(in module wfl.generate.smiles)</a>
+</li>
+        <li><a href="wfl.html#wfl.map.run">(in module wfl.map)</a>
 </li>
       </ul></li>
       <li><a href="wfl.fit.html#wfl.fit.ace.run_ace_fit">run_ace_fit() (in module wfl.fit.ace)</a>
@@ -1894,8 +1898,6 @@ title="Fullscreen mode"
         <li><a href="wfl.cli.commands.html#module-wfl.cli.commands.error">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     wfl.cli.commands.eval
 
@@ -1903,6 +1905,8 @@ title="Fullscreen mode"
         <li><a href="wfl.cli.commands.html#module-wfl.cli.commands.eval">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     wfl.cli.commands.generate
 
@@ -2132,6 +2136,13 @@ title="Fullscreen mode"
 
       <ul>
         <li><a href="wfl.generate.html#module-wfl.generate.utils">module</a>
+</li>
+      </ul></li>
+      <li>
+    wfl.map
+
+      <ul>
+        <li><a href="wfl.html#module-wfl.map">module</a>
 </li>
       </ul></li>
       <li>
