--- a/wfl.calculators.html
+++ b/wfl.calculators.html
@@ -854,7 +854,7 @@ stress for nonperiodic configurations), a warning will be printed.</p></li>
 ‘_auto_’ for automatically determining name of calculator constructor, and
 None for SinglePointCalculator instead of info/arrays.</p></li>
 <li><p><strong>verbose</strong> (<em>bool</em>) – verbose output</p></li>
-<li><p><strong>autopara_info</strong> (<em>AutoParaInfo</em><em>, </em><em>optional</em>) – information for automatic parallelization</p></li>
+<li><p><strong>autopara_info</strong> (<em>AutoParaInfo / dict</em><em>, </em><em>optional</em>) – information for automatic parallelization</p></li>
 </ul>
 </dd>
 <dt class="field-even">Returns</dt>
