--- a/wfl.descriptors.html
+++ b/wfl.descriptors.html
@@ -594,7 +594,7 @@ entries will be created, one per Zcenter, named &lt;key&gt;_Z_&lt;Zcenter&gt;.</
 <li><p><strong>composition_weight</strong> (<em>bool</em><em>, </em><em>default True</em>) – when concatenating contributions from different species for a per-config, weight each by composition fraction</p></li>
 <li><p><strong>force</strong> (<em>bool</em><em>, </em><em>default False</em>) – overwrite key if already exists</p></li>
 <li><p><strong>verbose</strong> (<em>bool</em><em>, </em><em>default False</em>) – verbose output</p></li>
-<li><p><strong>autopara_info</strong> (<em>AutoParaInfo</em><em>, </em><em>optional</em>) – information for automatic parallelization</p></li>
+<li><p><strong>autopara_info</strong> (<em>AutoParaInfo / dict</em><em>, </em><em>optional</em>) – information for automatic parallelization</p></li>
 </ul>
 </dd>
 <dt class="field-even">Returns</dt>
