--- a/wfl.generate.md_PROTECT.html
+++ b/wfl.generate.md_PROTECT.html
@@ -700,7 +700,7 @@ Used during MD loop with one config at a time, returning True/False</p></li>
 Used at end of MD loop with entire trajectory as list, returns subset</p></li>
 <li><p><strong>abort_check</strong> (<em>default None</em><em>,</em>) – wfl.generate.md.abort_base.AbortBase - derived class that
 checks the MD snapshots and aborts the simulation on some condition.</p></li>
-<li><p><strong>autopara_info</strong> (<em>AutoParaInfo</em><em>, </em><em>optional</em>) – information for automatic parallelization</p></li>
+<li><p><strong>autopara_info</strong> (<em>AutoParaInfo / dict</em><em>, </em><em>optional</em>) – information for automatic parallelization</p></li>
 </ul>
 </dd>
 <dt class="field-even">Returns</dt>
