deploy: 75e1f825f8e3b4917a0bc4125a36e063ce7fb859

--- a/command_line.automatic_docs.html
+++ b/command_line.automatic_docs.html
@@ -793,7 +793,7 @@ title="Print to PDF"
 <dd><p>Number of configs to be evaluated per each calculator initialization</p>
 <dl class="field-list simple">
 <dt class="field-odd">Default</dt>
-<dd class="field-odd"><p>10</p>
+<dd class="field-odd"><p><code class="docutils literal notranslate"><span class="pre">10</span></code></p>
 </dd>
 </dl>
 </dd></dl>
@@ -836,7 +836,7 @@ title="Print to PDF"
 <dd><p>Number of configs to be evaluated per each calculator initialization</p>
 <dl class="field-list simple">
 <dt class="field-odd">Default</dt>
-<dd class="field-odd"><p>10</p>
+<dd class="field-odd"><p><code class="docutils literal notranslate"><span class="pre">10</span></code></p>
 </dd>
 </dl>
 </dd></dl>
@@ -855,7 +855,7 @@ title="Print to PDF"
 <dd><p>dtype MACE model was fitted with</p>
 <dl class="field-list simple">
 <dt class="field-odd">Default</dt>
-<dd class="field-odd"><p>float64</p>
+<dd class="field-odd"><p><code class="docutils literal notranslate"><span class="pre">float64</span></code></p>
 </dd>
 <dt class="field-even">Options</dt>
 <dd class="field-even"><p>float64 | float32</p>
@@ -893,7 +893,7 @@ title="Print to PDF"
 <dd><p>Number of configs to be evaluated per each calculator initialization</p>
 <dl class="field-list simple">
 <dt class="field-odd">Default</dt>
-<dd class="field-odd"><p>10</p>
+<dd class="field-odd"><p><code class="docutils literal notranslate"><span class="pre">10</span></code></p>
 </dd>
 </dl>
 </dd></dl>
