deploy: e4822a8f08a9e57c4f281106ab4743350b83fb04

--- a/genindex.html
+++ b/genindex.html
@@ -830,9 +830,11 @@ title="Fullscreen mode"
 </li>
       <li><a href="wfl.utils.html#wfl.utils.ndim_neighbor_list.calc_list_cells">calc_list_cells() (in module wfl.utils.ndim_neighbor_list)</a>
 </li>
-      <li><a href="wfl.calculators.html#wfl.calculators.espresso.Espresso.calculate">calculate() (wfl.calculators.espresso.Espresso method)</a>
+      <li><a href="wfl.calculators.html#wfl.calculators.castep.Castep.calculate">calculate() (wfl.calculators.castep.Castep method)</a>
 
       <ul>
+        <li><a href="wfl.calculators.html#wfl.calculators.espresso.Espresso.calculate">(wfl.calculators.espresso.Espresso method)</a>
+</li>
         <li><a href="wfl.calculators.html#wfl.calculators.mopac.MOPAC.calculate">(wfl.calculators.mopac.MOPAC method)</a>
 </li>
         <li><a href="wfl.calculators.orca.html#wfl.calculators.orca.basinhopping.BasinHoppingORCA.calculate">(wfl.calculators.orca.basinhopping.BasinHoppingORCA method)</a>
@@ -846,11 +848,11 @@ title="Fullscreen mode"
 </li>
       <li><a href="wfl.cli.commands.html#wfl.cli.commands.descriptor.calculate_descriptor">calculate_descriptor() (in module wfl.cli.commands.descriptor)</a>
 </li>
+      <li><a href="wfl.calculators.html#wfl.calculators.castep.Castep">Castep (class in wfl.calculators.castep)</a>
+</li>
       <li><a href="wfl.utils.html#wfl.utils.misc.chunks">chunks() (in module wfl.utils.misc)</a>
 </li>
       <li><a href="wfl.utils.html#wfl.utils.file_utils.clean_dir">clean_dir() (in module wfl.utils.file_utils)</a>
-</li>
-      <li><a href="wfl.calculators.html#wfl.calculators.utils.clean_failed_results">clean_failed_results() (in module wfl.calculators.utils)</a>
 </li>
       <li><a href="wfl.calculators.html#wfl.calculators.utils.clean_rundir">clean_rundir() (in module wfl.calculators.utils)</a>
 
@@ -948,16 +950,12 @@ title="Fullscreen mode"
 </li>
       <li><a href="wfl.generate.html#wfl.generate.normal_modes.NormalModes.evals_to_freqs">evals_to_freqs() (wfl.generate.normal_modes.NormalModes static method)</a>
 </li>
-      <li><a href="wfl.calculators.html#wfl.calculators.castep.evaluate_autopara_wrappable">evaluate_autopara_wrappable() (in module wfl.calculators.castep)</a>
-</li>
       <li><a href="wfl.calculators.orca.html#wfl.calculators.orca.basinhopping.evaluate_basin_hopping">evaluate_basin_hopping() (in module wfl.calculators.orca.basinhopping)</a>
 </li>
-      <li><a href="wfl.calculators.html#wfl.calculators.dft.evaluate_dft">evaluate_dft() (in module wfl.calculators.dft)</a>
+      <li><a href="wfl.cli.html#wfl.cli.gap_rss_iter_fit.evaluate_iter_and_fit_all">evaluate_iter_and_fit_all() (in module wfl.cli.gap_rss_iter_fit)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="wfl.cli.html#wfl.cli.gap_rss_iter_fit.evaluate_iter_and_fit_all">evaluate_iter_and_fit_all() (in module wfl.cli.gap_rss_iter_fit)</a>
-</li>
       <li><a href="wfl.cli.html#wfl.cli.gap_rss_iter_fit.evaluate_ref">evaluate_ref() (in module wfl.cli.gap_rss_iter_fit)</a>
 </li>
       <li><a href="wfl.generate.html#wfl.generate.normal_modes.NormalModes.evecs_to_modes">evecs_to_modes() (wfl.generate.normal_modes.NormalModes static method)</a>
@@ -1048,9 +1046,11 @@ title="Fullscreen mode"
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="wfl.utils.html#wfl.utils.params.Params.implemented_calculators">implemented_calculators (wfl.utils.params.Params attribute)</a>
 </li>
-      <li><a href="wfl.calculators.html#wfl.calculators.espresso.Espresso.implemented_properties">implemented_properties (wfl.calculators.espresso.Espresso attribute)</a>
+      <li><a href="wfl.calculators.html#wfl.calculators.castep.Castep.implemented_properties">implemented_properties (wfl.calculators.castep.Castep attribute)</a>
 
       <ul>
+        <li><a href="wfl.calculators.html#wfl.calculators.espresso.Espresso.implemented_properties">(wfl.calculators.espresso.Espresso attribute)</a>
+</li>
         <li><a href="wfl.calculators.orca.html#wfl.calculators.orca.basinhopping.BasinHoppingORCA.implemented_properties">(wfl.calculators.orca.basinhopping.BasinHoppingORCA attribute)</a>
 </li>
         <li><a href="wfl.calculators.orca.html#wfl.calculators.orca.ORCA.implemented_properties">(wfl.calculators.orca.ORCA attribute)</a>
@@ -1152,8 +1152,6 @@ title="Fullscreen mode"
 </li>
         <li><a href="wfl.calculators.html#module-wfl.calculators.committee">wfl.calculators.committee</a>
 </li>
-        <li><a href="wfl.calculators.html#module-wfl.calculators.dft">wfl.calculators.dft</a>
-</li>
         <li><a href="wfl.calculators.html#module-wfl.calculators.espresso">wfl.calculators.espresso</a>
 </li>
         <li><a href="wfl.calculators.html#module-wfl.calculators.generic">wfl.calculators.generic</a>
@@ -1187,8 +1185,6 @@ title="Fullscreen mode"
         <li><a href="wfl.cli.commands.html#module-wfl.cli.commands.generate">wfl.cli.commands.generate</a>
 </li>
         <li><a href="wfl.cli.commands.html#module-wfl.cli.commands.select">wfl.cli.commands.select</a>
-</li>
-        <li><a href="wfl.cli.html#module-wfl.cli.dft_convergence_test">wfl.cli.dft_convergence_test</a>
 </li>
         <li><a href="wfl.cli.html#module-wfl.cli.gap_rss_iter_fit">wfl.cli.gap_rss_iter_fit</a>
 </li>
@@ -1461,8 +1457,12 @@ title="Fullscreen mode"
 </li>
       <li><a href="wfl.cli.html#wfl.cli.gap_rss_iter_fit.select_fitting_and_testing_for_groups">select_fitting_and_testing_for_groups() (in module wfl.cli.gap_rss_iter_fit)</a>
 </li>
-      <li><a href="wfl.calculators.html#wfl.calculators.espresso.Espresso.setup_calc_params">setup_calc_params() (wfl.calculators.espresso.Espresso method)</a>
+      <li><a href="wfl.calculators.html#wfl.calculators.castep.Castep.setup_calc_params">setup_calc_params() (wfl.calculators.castep.Castep method)</a>
+
+      <ul>
+        <li><a href="wfl.calculators.html#wfl.calculators.espresso.Espresso.setup_calc_params">(wfl.calculators.espresso.Espresso method)</a>
 </li>
+      </ul></li>
       <li><a href="wfl.calculators.html#wfl.calculators.wfl_fileio_calculator.WFLFileIOCalculator.setup_rundir">setup_rundir() (wfl.calculators.wfl_fileio_calculator.WFLFileIOCalculator method)</a>
 </li>
   </ul></td>
@@ -1794,13 +1794,6 @@ title="Fullscreen mode"
 </li>
       </ul></li>
       <li>
-    wfl.calculators.dft
-
-      <ul>
-        <li><a href="wfl.calculators.html#module-wfl.calculators.dft">module</a>
-</li>
-      </ul></li>
-      <li>
     wfl.calculators.espresso
 
       <ul>
@@ -1919,13 +1912,6 @@ title="Fullscreen mode"
 
       <ul>
         <li><a href="wfl.cli.commands.html#module-wfl.cli.commands.select">module</a>
-</li>
-      </ul></li>
-      <li>
-    wfl.cli.dft_convergence_test
-
-      <ul>
-        <li><a href="wfl.cli.html#module-wfl.cli.dft_convergence_test">module</a>
 </li>
       </ul></li>
       <li>
@@ -2334,9 +2320,11 @@ title="Fullscreen mode"
         <li><a href="wfl.utils.html#module-wfl.utils.vol_composition_space">module</a>
 </li>
       </ul></li>
-      <li><a href="wfl.calculators.html#wfl.calculators.espresso.Espresso.wfl_generic_def_autopara_info">wfl_generic_def_autopara_info (wfl.calculators.espresso.Espresso attribute)</a>
+      <li><a href="wfl.calculators.html#wfl.calculators.castep.Castep.wfl_generic_def_autopara_info">wfl_generic_def_autopara_info (wfl.calculators.castep.Castep attribute)</a>
 
       <ul>
+        <li><a href="wfl.calculators.html#wfl.calculators.espresso.Espresso.wfl_generic_def_autopara_info">(wfl.calculators.espresso.Espresso attribute)</a>
+</li>
         <li><a href="wfl.calculators.html#wfl.calculators.mopac.MOPAC.wfl_generic_def_autopara_info">(wfl.calculators.mopac.MOPAC attribute)</a>
 </li>
         <li><a href="wfl.calculators.orca.html#wfl.calculators.orca.ORCA.wfl_generic_def_autopara_info">(wfl.calculators.orca.ORCA attribute)</a>
