--- a/genindex.html
+++ b/genindex.html
@@ -1437,6 +1437,8 @@ title="Fullscreen mode"
 </li>
         <li><a href="wfl.generate.html#module-wfl.generate.optimize">wfl.generate.optimize</a>
 </li>
+        <li><a href="wfl.generate.html#module-wfl.generate.phonopy">wfl.generate.phonopy</a>
+</li>
         <li><a href="wfl.generate.html#module-wfl.generate.smiles">wfl.generate.smiles</a>
 </li>
         <li><a href="wfl.generate.html#module-wfl.generate.supercells">wfl.generate.supercells</a>
@@ -1624,6 +1626,8 @@ title="Fullscreen mode"
         <li><a href="wfl.generate.html#wfl.generate.minimahopping.run">(in module wfl.generate.minimahopping)</a>
 </li>
         <li><a href="wfl.generate.html#wfl.generate.optimize.run">(in module wfl.generate.optimize)</a>
+</li>
+        <li><a href="wfl.generate.html#wfl.generate.phonopy.run">(in module wfl.generate.phonopy)</a>
 </li>
         <li><a href="wfl.generate.html#wfl.generate.smiles.run">(in module wfl.generate.smiles)</a>
 </li>
@@ -2380,6 +2384,13 @@ title="Fullscreen mode"
 
       <ul>
         <li><a href="wfl.generate.html#module-wfl.generate.optimize">module</a>
+</li>
+      </ul></li>
+      <li>
+    wfl.generate.phonopy
+
+      <ul>
+        <li><a href="wfl.generate.html#module-wfl.generate.phonopy">module</a>
 </li>
       </ul></li>
       <li>
