deploy: 920ea7ebf2b7ca9c315201c8ebb551166c0d4d33

--- a/genindex.html
+++ b/genindex.html
@@ -974,6 +974,8 @@ title="Fullscreen mode"
 </li>
       <li><a href="wfl.calculators.html#wfl.calculators.aims.Aims">Aims (class in wfl.calculators.aims)</a>
 </li>
+      <li><a href="wfl.html#wfl.configset.OutputSpec.all_written">all_written() (wfl.configset.OutputSpec method)</a>
+</li>
       <li><a href="wfl.generate.html#wfl.generate.supercells.antisite">antisite() (in module wfl.generate.supercells)</a>
 </li>
       <li><a href="wfl.utils.html#wfl.utils.at_copy_save_results.at_copy_save_results">at_copy_save_results() (in module wfl.utils.at_copy_save_results)</a>
@@ -1139,8 +1141,6 @@ title="Fullscreen mode"
       <li><a href="wfl.autoparallelize.html#wfl.autoparallelize.remote.do_remotely">do_remotely() (in module wfl.autoparallelize.remote)</a>
 </li>
       <li><a href="wfl.select.html#wfl.select.by_descriptor.do_svd">do_svd() (in module wfl.select.by_descriptor)</a>
-</li>
-      <li><a href="wfl.html#wfl.configset.OutputSpec.done">done() (wfl.configset.OutputSpec method)</a>
 </li>
   </ul></td>
 </tr></table>
