deploy: 39eca4a0afe65c274ff7c747f4ac75ecd9bde2d8

--- a/genindex.html
+++ b/genindex.html
@@ -1035,15 +1035,17 @@ document.write(`
 </li>
       <li><a href="wfl.calculators.orca.html#wfl.calculators.orca.ORCA.get_default_multiplicity">get_default_multiplicity() (wfl.calculators.orca.ORCA static method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="wfl.calculators.orca.html#wfl.calculators.orca.basinhopping.BasinHoppingORCA.get_homo">get_homo() (wfl.calculators.orca.basinhopping.BasinHoppingORCA method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="wfl.calculators.orca.html#wfl.calculators.orca.basinhopping.BasinHoppingORCA.get_multiplicity">get_multiplicity() (wfl.calculators.orca.basinhopping.BasinHoppingORCA method)</a>
 </li>
       <li><a href="wfl.cli.html#wfl.cli.gap_rss_iter_fit.get_old_fitting_files">get_old_fitting_files() (in module wfl.cli.gap_rss_iter_fit)</a>
 </li>
       <li><a href="wfl.autoparallelize.html#wfl.autoparallelize.utils.get_remote_info">get_remote_info() (in module wfl.autoparallelize.utils)</a>
+</li>
+      <li><a href="wfl.autoparallelize.html#wfl.autoparallelize.utils.get_root_global_seed">get_root_global_seed() (in module wfl.autoparallelize.utils)</a>
 </li>
       <li><a href="wfl.utils.html#wfl.utils.version.get_wfl_version">get_wfl_version() (in module wfl.utils.version)</a>
 </li>
@@ -1487,6 +1489,8 @@ document.write(`
       <li><a href="wfl.cli.html#wfl.cli.gap_rss_iter_fit.select_fitting_and_testing_for_groups">select_fitting_and_testing_for_groups() (in module wfl.cli.gap_rss_iter_fit)</a>
 </li>
       <li><a href="wfl.fit.html#wfl.fit.error.select_units">select_units() (in module wfl.fit.error)</a>
+</li>
+      <li><a href="wfl.autoparallelize.html#wfl.autoparallelize.utils.set_autopara_per_item_info">set_autopara_per_item_info() (in module wfl.autoparallelize.utils)</a>
 </li>
       <li><a href="wfl.calculators.html#wfl.calculators.castep.Castep.setup_calc_params">setup_calc_params() (wfl.calculators.castep.Castep method)</a>
 
@@ -2451,6 +2455,8 @@ document.write(`
       <li><a href="wfl.calculators.html#wfl.calculators.vasp.Vasp.wfl_generic_num_inputs_per_python_subprocess">wfl_generic_num_inputs_per_python_subprocess (wfl.calculators.vasp.Vasp attribute)</a>
 </li>
       <li><a href="wfl.calculators.html#wfl.calculators.wfl_fileio_calculator.WFLFileIOCalculator">WFLFileIOCalculator (class in wfl.calculators.wfl_fileio_calculator)</a>
+</li>
+      <li><a href="wfl.html#wfl.configset.OutputSpec.write">write() (wfl.configset.OutputSpec method)</a>
 </li>
       <li><a href="wfl.calculators.orca.html#wfl.calculators.orca.ORCA.write_input">write_input() (wfl.calculators.orca.ORCA method)</a>
 </li>
