deploy: fcfdda2fb65594d422b89c5e92cd225095a89d6c

--- a/examples.fhiaims_calculator.html
+++ b/examples.fhiaims_calculator.html
@@ -363,7 +363,7 @@ systems the property “stress” will be ignored.</div>
 <span class="kn">import</span> <span class="nn">wfl</span>
 <span class="kn">from</span> <span class="nn">wfl.calculators.aims</span> <span class="kn">import</span> <span class="n">Aims</span>
 <span class="kn">from</span> <span class="nn">wfl.calculators</span> <span class="kn">import</span> <span class="n">generic</span>
-<span class="kn">from</span> <span class="nn">wfl.autoparallelize.autoparainfo</span> <span class="kn">import</span> <span class="n">AutoparaInfo</span>
+<span class="kn">from</span> <span class="nn">wfl.autoparallelize</span> <span class="kn">import</span> <span class="n">AutoparaInfo</span>
 <span class="kn">from</span> <span class="nn">wfl.configset</span> <span class="kn">import</span> <span class="n">ConfigSet</span><span class="p">,</span> <span class="n">OutputSpec</span>
 
 
