--- a/examples.daisy_chain_mlip_fitting.html
+++ b/examples.daisy_chain_mlip_fitting.html
@@ -423,8 +423,8 @@ document.write(`
 <span class="kn">import</span> <span class="nn">wfl.select.by_descriptor</span>
 <span class="kn">import</span> <span class="nn">wfl.fit.gap.simple</span>
 <span class="kn">from</span> <span class="nn">wfl.calculators</span> <span class="kn">import</span> <span class="n">generic</span>
-<span class="kn">from</span> <span class="nn">wfl.autoparallelize.autoparainfo</span> <span class="kn">import</span> <span class="n">AutoparaInfo</span>
-<span class="kn">from</span> <span class="nn">wfl.autoparallelize.remoteinfo</span> <span class="kn">import</span> <span class="n">RemoteInfo</span>
+<span class="kn">from</span> <span class="nn">wfl.autoparallelize</span> <span class="kn">import</span> <span class="n">AutoparaInfo</span>
+<span class="kn">from</span> <span class="nn">wfl.autoparallelize</span> <span class="kn">import</span> <span class="n">RemoteInfo</span>
 <span class="kn">from</span> <span class="nn">wfl.generate</span> <span class="kn">import</span> <span class="n">smiles</span>
 <span class="kn">from</span> <span class="nn">wfl.utils.configs</span> <span class="kn">import</span> <span class="n">atomization_energy</span>
 <span class="kn">from</span> <span class="nn">wfl.select.simple</span> <span class="kn">import</span> <span class="n">by_bool_func</span>
