--- a/examples.normal_modes.html
+++ b/examples.normal_modes.html
@@ -386,7 +386,7 @@ document.write(`
 <span class="kn">from</span> <span class="nn">xtb.ase.calculator</span> <span class="kn">import</span> <span class="n">XTB</span>
 <span class="kn">from</span> <span class="nn">wfl.configset</span> <span class="kn">import</span> <span class="n">ConfigSet</span><span class="p">,</span> <span class="n">OutputSpec</span>
 <span class="kn">from</span> <span class="nn">wfl.generate</span> <span class="kn">import</span> <span class="n">normal_modes</span> <span class="k">as</span> <span class="n">nm</span> 
-<span class="kn">from</span> <span class="nn">wfl.autoparallelize.autoparainfo</span> <span class="kn">import</span> <span class="n">AutoparaInfo</span>
+<span class="kn">from</span> <span class="nn">wfl.autoparallelize</span> <span class="kn">import</span> <span class="n">AutoparaInfo</span>
 
 <span class="n">mols</span> <span class="o">=</span> <span class="p">[</span><span class="n">molecule</span><span class="p">(</span><span class="s2">&quot;CH4&quot;</span><span class="p">),</span> <span class="n">molecule</span><span class="p">(</span><span class="s2">&quot;H2O&quot;</span><span class="p">)]</span>
 <span class="n">configset</span> <span class="o">=</span> <span class="n">ConfigSet</span><span class="p">(</span><span class="n">mols</span><span class="p">)</span>
