--- a/examples.orca_python.html
+++ b/examples.orca_python.html
@@ -351,8 +351,8 @@ document.write(`
 <span class="kn">from</span> <span class="nn">wfl.calculators.orca</span> <span class="kn">import</span> <span class="n">ORCA</span><span class="p">,</span> <span class="n">natural_population_analysis</span>
 <span class="kn">from</span> <span class="nn">functools</span> <span class="kn">import</span> <span class="n">partial</span>
 <span class="kn">from</span> <span class="nn">wfl.calculators</span> <span class="kn">import</span> <span class="n">generic</span>
-<span class="kn">from</span> <span class="nn">wfl.autoparallelize.remoteinfo</span> <span class="kn">import</span> <span class="n">RemoteInfo</span>
-<span class="kn">from</span> <span class="nn">wfl.autoparallelize.autoparainfo</span> <span class="kn">import</span> <span class="n">AutoparaInfo</span>
+<span class="kn">from</span> <span class="nn">wfl.autoparallelize</span> <span class="kn">import</span> <span class="n">RemoteInfo</span>
+<span class="kn">from</span> <span class="nn">wfl.autoparallelize</span> <span class="kn">import</span> <span class="n">AutoparaInfo</span>
 <span class="kn">from</span> <span class="nn">expyre.resources</span> <span class="kn">import</span> <span class="n">Resources</span>
 
 <span class="n">input_fname</span> <span class="o">=</span> <span class="s2">&quot;configs.xyz&quot;</span>
