deploy: 047c366eb21e3ad81e0ec960d68568e3a1eab996

--- a/genindex.html
+++ b/genindex.html
@@ -816,10 +816,10 @@ document.write(`
 </li>
       <li><a href="wfl.utils.html#wfl.utils.at_copy_save_results.at_copy_save_results">at_copy_save_results() (in module wfl.utils.at_copy_save_results)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="wfl.utils.html#wfl.utils.configs.atomization_energy">atomization_energy() (in module wfl.utils.configs)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="wfl.generate.md_PROTECT.html#wfl.generate.md.abort.AbortOnCollision.atoms_ok">atoms_ok() (wfl.generate.md.abort.AbortOnCollision method)</a>
 
       <ul>
@@ -828,12 +828,24 @@ document.write(`
       </ul></li>
       <li><a href="wfl.utils.html#wfl.utils.misc.atoms_to_list">atoms_to_list() (in module wfl.utils.misc)</a>
 </li>
-      <li><a href="wfl.autoparallelize.html#wfl.autoparallelize.autoparainfo.AutoparaInfo">AutoparaInfo (class in wfl.autoparallelize.autoparainfo)</a>
+      <li><a href="wfl.autoparallelize.html#wfl.autoparallelize.AutoparaInfo">AutoparaInfo (class in wfl.autoparallelize)</a>
+
+      <ul>
+        <li><a href="wfl.autoparallelize.html#wfl.autoparallelize.autoparainfo.AutoparaInfo">(class in wfl.autoparallelize.autoparainfo)</a>
 </li>
-      <li><a href="wfl.autoparallelize.html#wfl.autoparallelize.base.autoparallelize">autoparallelize() (in module wfl.autoparallelize.base)</a>
+      </ul></li>
+      <li><a href="wfl.autoparallelize.html#wfl.autoparallelize.autoparallelize">autoparallelize() (in module wfl.autoparallelize)</a>
+
+      <ul>
+        <li><a href="wfl.autoparallelize.html#wfl.autoparallelize.base.autoparallelize">(in module wfl.autoparallelize.base)</a>
 </li>
-      <li><a href="wfl.autoparallelize.html#wfl.autoparallelize.base.autoparallelize_docstring">autoparallelize_docstring() (in module wfl.autoparallelize.base)</a>
+      </ul></li>
+      <li><a href="wfl.autoparallelize.html#wfl.autoparallelize.autoparallelize_docstring">autoparallelize_docstring() (in module wfl.autoparallelize)</a>
+
+      <ul>
+        <li><a href="wfl.autoparallelize.html#wfl.autoparallelize.base.autoparallelize_docstring">(in module wfl.autoparallelize.base)</a>
 </li>
+      </ul></li>
   </ul></td>
 </tr></table>
 
@@ -1475,8 +1487,12 @@ document.write(`
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="wfl.autoparallelize.html#wfl.autoparallelize.remoteinfo.RemoteInfo">RemoteInfo (class in wfl.autoparallelize.remoteinfo)</a>
+      <li><a href="wfl.autoparallelize.html#wfl.autoparallelize.RemoteInfo">RemoteInfo (class in wfl.autoparallelize)</a>
+
+      <ul>
+        <li><a href="wfl.autoparallelize.html#wfl.autoparallelize.remoteinfo.RemoteInfo">(class in wfl.autoparallelize.remoteinfo)</a>
 </li>
+      </ul></li>
       <li><a href="wfl.utils.html#wfl.utils.replace_eval_in_strs.replace_eval_in_strs">replace_eval_in_strs() (in module wfl.utils.replace_eval_in_strs)</a>
 </li>
       <li><a href="wfl.utils.html#wfl.utils.round_sig_figs.round_sig_figs">round_sig_figs() (in module wfl.utils.round_sig_figs)</a>
@@ -1560,8 +1576,12 @@ document.write(`
 <h2 id="U">U</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="wfl.autoparallelize.html#wfl.autoparallelize.autoparainfo.AutoparaInfo.update_defaults">update_defaults() (wfl.autoparallelize.autoparainfo.AutoparaInfo method)</a>
+      <li><a href="wfl.autoparallelize.html#wfl.autoparallelize.AutoparaInfo.update_defaults">update_defaults() (wfl.autoparallelize.AutoparaInfo method)</a>
+
+      <ul>
+        <li><a href="wfl.autoparallelize.html#wfl.autoparallelize.autoparainfo.AutoparaInfo.update_defaults">(wfl.autoparallelize.autoparainfo.AutoparaInfo method)</a>
 </li>
+      </ul></li>
   </ul></td>
 </tr></table>
 
