--- a/wfl.generate.html
+++ b/wfl.generate.html
@@ -957,7 +957,8 @@ deterministic local seed, use a random value if None</p></li>
 <li><p><strong>n_antisite</strong> (<em>int</em><em>, </em><em>default 1</em>) – number of antisites to create in each supercell</p></li>
 <li><p><strong>cluster_r</strong> (<em>float</em><em>, </em><em>default 0.0</em>) – if &gt; 0.0, multiply by 1st nn distance of initial antisite, and make antisites in cluster of
 atoms within this distance of initial antisite.</p></li>
-<li><p><strong>Zs</strong> (<em>iterable</em><em>(</em><em>int</em><em>)</em><em>, </em><em>default None</em>) – list of atomic numbers to be used to create antisites.  If none or length 0, use set of species already present in each config for itself.</p></li>
+<li><p><strong>Zs</strong> (<em>iterable</em><em>(</em><em>int</em><em>)</em><em>, </em><em>default None</em>) – list of atomic numbers to be used to create antisites.  If none or length 0, use set of species already present
+in each config for itself.</p></li>
 <li><p><strong>autopara_info</strong> (<em>AutoParaInfo / dict</em><em>, </em><em>optional</em>) – information for automatic parallelization</p></li>
 </ul>
 </dd>
